# Parallelizer

./: CMakeLists.txt
src/: file_handler.cpp  file_handler.h  first_parser.cpp  first_parser.h  main-api.cpp  parse.cpp  utils.h
test/file_handler/code-test/: test1
test/file_handler/non-code-test/: test1  test2
